Update LGM